Fix issues with scrollbars on firefox

--- a/src/js/components/molecules/tabs.scss
+++ b/src/js/components/molecules/tabs.scss
@@ -26,8 +26,8 @@
 
         display: flex;
         padding: 0;
+        overflow-x: auto;
 
-        overflow-x: scroll;
         -ms-overflow-style: -ms-autohiding-scrollbar; // hide the scrollbar on ie11 and edge
 
         &::-webkit-scrollbar-track {
