--- a/src/js/components/organisms/table-compare/table-compare.scss
+++ b/src/js/components/organisms/table-compare/table-compare.scss
@@ -4,8 +4,8 @@
 }
 
 .table-compare__scroll-container {
-    overflow: auto;
     overflow-y: visible;
+    overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
